--- a/itc/recruit_app/templates/recruit_app/navbar.html
+++ b/itc/recruit_app/templates/recruit_app/navbar.html
@@ -15,13 +15,13 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link active" href="{% url 'home' %}">Dashboard <span class="sr-only">(current)</span></a>
-      <a class="nav-item nav-link" href="{% url 'recruiter' %}">Recruiter</a>
-      <a class="nav-item nav-link" href="{% url 'panelist' %}">Panelist</a>
-      <a class="nav-item nav-link disabled" href="{% url 'hr' %}">HR</a>
+      {% comment %} <a class="nav-item nav-link active" href="{% url 'home' %}">Dashboard <span class="sr-only">(current)</span></a> {% endcomment %}
+      <a class="nav-item nav-link" href="{% url 'recruiter_home' %}">Recruiter</a>
+      <a class="nav-item nav-link" href="{% url 'panelist_home' %}">Panelist</a>
+      {% comment %} <a class="nav-item nav-link disabled" href="{% url 'hr' %}">HR</a> {% endcomment %}
     </div>
   </div>
-  <span class = "hello-msg">Hello, {{request.user}}</span>
+  <span class = "hello-msg">Welcome, {{request.user}}</span>
   <span class = "hello-msg"><a href= "{% url 'logout' %}">Logout</a></span>
 
 
