--- a/itc/recruit_app/templates/recruit_app/interview.html
+++ b/itc/recruit_app/templates/recruit_app/interview.html
@@ -1,19 +1,118 @@
 {% extends 'recruit_app/main.html' %}
 {% block content %}
-<style>h1 {
-    text-align: center;
-    </style>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+{% comment %} <h3 style="text-align:right"><a href="{% url 'schedule' %}"> Check Schedule</a></h3> {% endcomment %}
+ <br>
+        
+        {% if messages %}
+          <ul class="messages" color = "green">
+            {% for message in messages %}
+              <li class="{{ message.tags }}">{{ message }}</li>
+            {% endfor %}
+          </ul>
+        {% endif %}
+<div class="container" style = "margin-top:50px">
+    <h2 class="text-center">Interview Scheduler</h2>
+    <br>
+    <form method="post" id="indexForm" action = "{% url 'save-interview' %}"data-courses-url="{% url 'ajax_load_panelists' %}" data-candidate-url = "{% url 'ajax_load_candidates' %}" data-schedule-url = "{% url 'ajax_load_schedules' %}">
+         {% csrf_token %}
+        <label>Skill</label>
+        <select name="skill" id="skill" class="form-control">
+            <option value="">---select skill---</option>
+            {% for i in skill %}
+            <option value="{{i.id}}">{{i.Skill_Category}}</option>
+            {% endfor %}
+        </select>
+        <br>
+        <label>Panelist</label>
+      <select name="panelists" id="panelists" class="form-control">
 
-<form>
-    <div class="form-group">
-    <label for="Skill">Skill_Category</label>
-    <select class="form-control" id="exampleFormControlSelect1">
-      <option>JAVA</option>
-      <option>PYTHON</option>
-      <option>BACKEND</option>
-      <option>FULL STACK</option>
-    </select>
-  </div>
-</form>    
+        </select>
+        <br>
+        <label>Candidate</label>
+        <select name="candidates" id="candidates" class="form-control">
+
+        </select>
+        <br>
+        <label>Available Slots</label>
+        <select name="schedules" id="schedules" class="form-control">
+
+        </select>
+       
+        <br><br>
+        <input type = "submit" value="Submit" class="form-control btn btn-primary">
+    </form>
+</div>
+
+
+{% comment %} <script src="https://code.jquery.com/jquery-3.1.1.min.js"> </script>  {% endcomment %}
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+  <script>
+    $("#skill").change(function () {
+      var url = $("#indexForm").attr("data-courses-url");  // get the url of the `load_courses` view
+      var skillID = $(this).val();  // get the selected programming ID from the HTML input
+      console.log( $(this).val() );
+
+     
+
+    $.ajax({                       // initialize an AJAX request
+        url: url,                    // set the url of the request (= localhost:8000/load-courses/)
+        data: {
+          'programming': skillID       // add the programming id to the GET parameters
+        },
+        success: function (data) { 
+            console.log(data)  // `data` is the return of the `load_courses` view function
+          $("#panelists").html(data);  // replace the contents of the course input with the data that came from the server
+        }
+        
+    }); 
+
+    });
+  </script>
+  <script>
+    $("#skill").change(function () {
+      var url = $("#indexForm").attr("data-candidate-url");  // get the url of the `load_courses` view
+      var skilliD = $(this).val();  // get the selected programming ID from the HTML input
+      console.log( $(this).val() );
+
+     
+
+    $.ajax({                       // initialize an AJAX request
+        url: url,                    // set the url of the request (= localhost:8000/load-courses/)
+        data: {
+          'programmings': skilliD       // add the programming id to the GET parameters
+        },
+        success: function (data) { 
+            console.log(data)  // `data` is the return of the `load_courses` view function
+          $("#candidates").html(data);  // replace the contents of the course input with the data that came from the server
+        }
+        
+    }); 
+
+    });
+  </script>
+  <script>
+    $("#panelists").change(function () {
+      var url = $("#indexForm").attr("data-schedule-url");  // get the url of the `load_courses` view
+      var skiliD = $(this).val();  // get the selected programming ID from the HTML input
+      console.log( $(this).val() );
+
+     
+
+    $.ajax({                       // initialize an AJAX request
+        url: url,                    // set the url of the request (= localhost:8000/load-courses/)
+        data: {
+          'programmingss': skiliD       // add the programming id to the GET parameters
+        },
+        success: function (data) { 
+            console.log(data)  // `data` is the return of the `load_courses` view function
+          $("#schedules").html(data);  // replace the contents of the course input with the data that came from the server
+        }
+        
+    }); 
+
+    });
+  </script>
+
 
 {% endblock %}
