--- a/itc/recruit_app/templates/recruit_app/recruiter.html
+++ b/itc/recruit_app/templates/recruit_app/recruiter.html
@@ -4,8 +4,8 @@
     text-align: center;
     </style>
 
-<h3 style="text-align:right"><a href="{% url 'search' %}"> Candidates</a></h3>
-<h3 style="text-align:right"><a href="{% url 'interview' %}"> Schedule Interview</a></h3>
+{% comment %} <h3 style="text-align:right"><a href="{% url 'search' %}"> Candidates</a></h3> {% endcomment %}
+{% comment %} <h3 style="text-align:right"><a href="{% url 'interview' %}"> Schedule Interview</a></h3> {% endcomment %}
 
 <h2> Enter Candidate details </h2>
 <h5>
